--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -100,6 +100,12 @@
 
       <div id="lorumtext"></div>
 
+      <div id="progress" style="display: none">
+        <div class="progress-indicator">
+          <div class="progress-left progress-dot"></div>
+          <div class="progress-right progress-dot"></div>
+        </div>
+      </div>
       <div id="control">
         <button id="more" class="moreButton">Még kérek</button>
       </div>
