--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -6,6 +6,25 @@
       content="A Lórum ipse olyan szöveggenerátor, amely magyarosan hangzó, ám halandzsa szöveget gyárt."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script type="text/javascript">
+      window.smartlook ||
+        (function (d) {
+          var o = (smartlook = function () {
+              o.api.push(arguments);
+            }),
+            h = d.getElementsByTagName("head")[0];
+          var c = d.createElement("script");
+          o.api = new Array();
+          c.async = true;
+          c.type = "text/javascript";
+          c.charset = "utf-8";
+          c.src = "https://web-sdk.smartlook.com/recorder.js";
+          h.appendChild(c);
+        })(document);
+      smartlook("init", "5baf185cff13edbced82e2b287248fc13b31faed", {
+        region: "eu",
+      });
+    </script>
     <script src="/static/jquery-2.2.0.min.js"></script>
     <script src="/static/lorum.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/lorum.css" />
